--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "cairopal",
-  "name": "Modern, Flexible Starknet Dapp Template",
+  "short_name": "canvas",
+  "name": "Paint-to-earn community canvas on the Ethereum blockchain",
   "lang": "en",
   "start_url": "/",
   "background_color": "#FFFFFF",
