--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"dev": "next dev",
 		"build": "next build",
 		"postbuild": "next-sitemap --config next-sitemap.config.js",
+		"log-storage-vars": "python3.7 getStorageVarAddress.py",
 		"start": "next start",
 		"lint": "next lint",
 		"lint:fix": "eslint src --fix && yarn format",
