--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@emotion/server": "^11.4.0",
 		"@emotion/styled": "^11.6.0",
 		"@fontsource/lexend": "^4.5.1",
+		"chakra-color-picker": "0.0.5",
 		"framer-motion": "^4.1.17",
 		"material-react-toastify": "^1.0.1",
 		"next": "^12.0.7",
