--- a/package.json
+++ b/package.json
@@ -16,10 +16,9 @@
 		"test": "pytest tests/ -s -p no:warnings",
 		"test:watch": "ptw -- tests/ -s -p no:warnings",
 		"lint": "next lint",
-		"lint:fix": "eslint src --fix && yarn format",
+		"lint:fix": "eslint src --fix && npm run format",
 		"type-check": "tsc --noEmit",
 		"format": "prettier --write src",
-		"up-latest": "yarn upgrade-interactive --latest",
 		"release": "standard-version",
 		"push-release": "git push --follow-tags origin main",
 		"prepare": "husky install"
@@ -38,6 +37,7 @@
 		"next": "^12.0.7",
 		"next-pwa": "^5.4.4",
 		"next-seo": "^4.28.1",
+		"prop-types": "^15.8.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.3.1",
@@ -56,6 +56,6 @@
 		"next-sitemap": "^1.6.203",
 		"prettier": "^2.5.1",
 		"standard-version": "^9.3.2",
-		"typescript": "^4.5.4"
+		"typescript": "^4.6.0"
 	}
 }
